packages/astro/e2e/fixtures/errors/src/pages/astro-client-media-error.astro
---
import SvelteDirectiveError from '../components/SvelteDirectiveError.svelte';
---

<div>
  <SvelteDirectiveError client:media />
</div>